<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">MyOrgranizer</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <!-- <string name="domain">https://organizer-python-758.appspot.com</string> -->
    <string name="domain">http://192.168.1.89:10080</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="submit">Submit</string>
    <string name="ok">Ok</string>
    <string name="cancel">Cancel</string>

    <!--strings for categories-->
    <string name="Cat0">All</string>
    <string name="Cat1">Apparel</string>
    <string name="Cat2">Auto</string>
    <string name="Cat3">Books</string>
    <string name="Cat4">Tools</string>
    <string name="Cat5">Toys</string>


</resources>
